# tcedit

./: .gitignore  CHANGELOG.md  HACKING.md  Makefile.am  README.md  TODO  autogen  autogen.sh  buffer.c  buffer.h  check.h  cmd.c  cmd.h  configure.ac  ctx.c  ctx.h  dstring.c  dstring.h  error.c  error.h  io.c  io.h  lines.c  lines.h  main.c  match.c  match.h  parse.c  parse.h  re.c  re.h  re.test  re.test.c  shell.c  shell.h  sig.c  sig.h  tcedit.1  tcedit.1.in  tcedit.c  (+6 more)
