# tcedit - a line oriented text editor.
# Copyright (C) 2018, 2019  Thomas Cort <linuxgeek@gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

bin_PROGRAMS = tcedit

tcedit_SOURCES = \
	buffer.c buffer.h \
	cmd.c cmd.h \
	config.h \
	ctx.c ctx.h \
	error.c error.h \
	io.c io.h \
	lines.c lines.h \
	main.c \
	match.c match.h \
	parse.c parse.h \
	shell.c shell.h

man_MANS = tcedit.1
